# delimit

./: .gitignore  Cargo.toml  README.md  todo
app/client/: Cargo.toml  LICENSE_APACHE  LICENSE_MIT
app/client/src/: draw.rs  lib.rs  particle.rs
app/client/src/draw/: facet.rs
app/client/src/gpu/: program.rs
app/client/src/nurbs/: facet.rs
app/client/tests/: draw.rs  gpu.rs  gpu_setup.rs  web.rs
app/server/: Cargo.toml
app/server/src/: index.rs  main.rs
app/server/src/index/: tests.rs
app/server/static/: boot.js
asset/: boot.js
chronicle/: Cargo.toml
chronicle/src/: html.rs  lib.rs  test.rs  text.rs
chronicle/src/html/: app.rs  attribute.rs  element.rs  node.rs  tag.rs  tests.rs  unit.rs
chronicle/src/text/: app.rs  list.rs  node.rs  tests.rs  unit.rs
core/: Cargo.toml
core/app/: Cargo.toml
core/app/src/: main.rs
core/app/src/index/: tests.rs
core/derive_node/: Cargo.toml
core/derive_node/src/: lib.rs
core/graph/: Cargo.toml
core/graph/src/: adapt.rs  aim.rs  apex.rs  base.rs  bay.rs  cusp.rs  deal.rs  edge.rs  hub.rs  lake.rs  lib.rs  link.rs  map.rs  meta.rs  ploy.rs  react.rs  scope.rs  serial.rs  snap.rs  solve.rs  tray.rs  view.rs  view_vec.rs  work.rs
core/graph/src/apex/: convert.rs  variant.rs
core/graph/src/hub/: convert.rs  deal.rs  deserialize.rs  get.rs
core/graph/src/link/: leaf.rs  tests.rs
core/graph/src/solve/: task.rs
core/graph/src/view/: convert.rs
core/graph/src/view_vec/: convert.rs
core/graph/src/work/: leaf.rs  node.rs
core/node_derive/: Cargo.toml
core/node_derive/src/: lib.rs
core/repo/: Cargo.toml
core/repo/src/: atlas.rs  main.rs
core/text/: Cargo.toml
core/text/src/: lib.rs
core/text/src/html/: attribute.rs  default.rs  element.rs  tag.rs
core/text/src/plain/: list.rs  tests.rs
dom/: Cargo.toml
edge/: Cargo.toml
edge/app/: Cargo.toml
edge/app/src/: demo.rs  lib.rs  particle.rs  window.rs
edge/app/src/demo/: nurbs.rs
edge/app/tests/: gpu.rs  test_app.rs  web.rs
edge/dom/: Cargo.toml
edge/dom/src/: canvas.rs  lib.rs  tests.rs  text.rs
edge/dom/tests/: dom_test.rs
edge/gpu/: Cargo.toml
edge/gpu/src/: bind.rs  binder.rs  buffer.rs  buffer_writer.rs  canvas.rs  draw_arrays.rs  encode.rs  encoder.rs  lib.rs  pipe.rs  pipeline.rs  shader.rs  surface.rs  texture.rs  tfo.rs  vao.rs  vertex_attribute.rs
edge/gpu/src/buffer/: blank.rs  reader.rs  sizer.rs  uniform.rs  writer.rs
edge/gpu/src/encode/: command.rs  compute.rs  dispatcher.rs  pass.rs  render.rs
edge/gpu/src/encoder/: render.rs
edge/gpu/src/pipe/: compute.rs  fragment.rs  layout.rs  render.rs  shader.rs  vertex.rs
edge/gpu/src/shader/: basic.rs  nurbs.wgsl
edge/gpu/tests/: compute.wgsl  dom_test.rs  gpu_test.rs  nurbs.wgsl
edge/mech/: Cargo.toml
edge/mech/src/: grid.rs  lib.rs  nurbs.rs  plot.rs  shape.rs
edge/mech/src/model/: grid.rs  nurbs.rs
edge/mech/src/plot/: control_matrix.wgsl  grid.rs  nurbs_grid.wgsl
edge/mech/src/plot/grid/basis/: control.wgsl  nurbs.wgsl
edge/mech/src/shader/: line.wgsl
edge/mech/tests/: mech_tests.rs
edge/webgl/: Cargo.toml
edge/webgl/src/: buffer_reader.rs  bufferer.rs  draw_arrays.rs  draw_elements.rs  lib.rs  program.rs  shader.rs  texture.rs  tfo.rs  vao_writer.rs  vertex_attribute.rs
edge/webgl/tests/: gpu.rs  test_webgl.rs
gpu/: Cargo.toml
gpu/src/: attr-aliases.txt  base.rs  buffer.rs  buffer_data.rs  buffer_in.rs  buffer_out.rs  buffer_reader.rs  bufferer.rs  canvas.rs  draw_arrays.rs  draw_elements.rs  elements.rs  init.rs  lib.rs  program.rs  shader.rs  texture.rs  tfo.rs  vao.rs  vao_writer.rs  vertex_attribute.rs
gpu/src/shader/: basic.rs  tests.rs
graph/: Cargo.toml
graph/src/: adapt.rs  aim.rs  alter.rs  apex.rs  app.rs  arc.rs  asset.rs  bare.rs  base.rs  bay.rs  cell.rs  compute.rs  cusp.rs  deal.rs  edge.rs  edge_old.rs  edit.rs  flat.rs  guard.rs  hub.rs  lake.rs  leaf.rs  lib.rs  link.rs  load.rs  make.rs  map.rs  meta.rs  mutex.rs  node.rs  pack.rs  part.rs  pipe.rs  ploy.rs  primitive.rs  react.rs  read.rs  repo.rs  role.rs  roll.rs  (+18 more)
graph/src/adapt/: alter.rs  gain.rs  memo.rs  post.rs
graph/src/alter/: edit.rs  post.rs  report.rs
graph/src/apex/: array.rs  convert.rs  deserialize.rs  edit.rs  error.rs  get.rs  hydrate.rs  import.rs  query.rs  reader.rs  set.rs  sure.rs  variant.rs  view.rs
graph/src/arc/: node.rs
graph/src/edge/: edge.rs  leaf.rs  main.rs  reactor.rs  responder.rs  solver.rs  unit_solver.rs  unit_tasker.rs
graph/src/hub/: convert.rs  deal.rs  deserialize.rs  get.rs  hydrate.rs  set.rs  view.rs
graph/src/link/: ace.rs  back.rs  leaf.rs  link.rs  reactor.rs  responder.rs  sole.rs  solver.rs  tests.rs  unit_solver.rs  unit_tasker.rs
graph/src/mutex/: lead.rs
graph/src/node/: alter.rs  convert.rs  form.rs  import.rs  leaf.rs  main.rs  pair.rs  pointer.rs  reactive.rs  reactor.rs  responder.rs  solver.rs  unit_solver.rs  unit_tasker.rs  work.rs
graph/src/primitive/: array.rs
graph/src/solve/: gain.rs  query.rs  task.rs  tray.rs
graph/src/unit/: ace.rs  asset.rs  gate.rs  repo.rs  serial.rs
graph/src/view/: ace.rs  ace_view.rs  base.rs  convert.rs  end.rs  load.rs  sole.rs  task.rs
graph/src/view_vec/: convert.rs
graph/src/work/: ace.rs  agent.rs  deuce.rs  envoy.rs  leaf.rs  node.rs  pair.rs  pipe.rs  sole.rs  trey.rs
help/: gpu.rs  node copy.rs  nurbs.rs  nurbs_grid.wgsl
help/graph/: roll.rs  views.rs
help/server/: send_file.rs
help/text/: build.rs  lang.rs  macro.rs  newtype_text.rs  tasker.rs  unit.rs  view.rs
mecha/: Cargo.toml  README.md
mecha/src/: array.rs  draw.rs  frame.rs  lib.rs  linear.rs  math.rs  matrix.rs  mesh.rs  part.rs  proto.rs  repo.rs  shape.rs  tests.rs  vector.rs
repo/: Cargo.toml
repo/src/: atlas.rs  deserializer.rs  main.rs  part.rs  tests.rs
standard/: Cargo.toml
text/: Cargo.toml
text/src/: html.rs  lib.rs  part.rs  plain.rs  rust.rs
text/src/html/: attribute.rs  default.rs  doc.rs  element.rs  tag.rs  tests.rs
text/src/plain/: doc.rs  gate.rs  list.rs  tests.rs  view.rs
text/src/rust/: struct_rs.rs  tests.rs
(+49 files in other folders)
