[workspace]
    members = ["app/server", "app/client", "text", "graph", "repo", "gpu", "mecha"]
    resolver = "2"

# [profile.release]
#     # Tell `rustc` to optimize for small code size.
#     opt-level = "s"

# [workspace.dependencies]
#     # dtolnay on github
#         dyn-clone = "1.0.17"
#         erased-serde = "0.4"
#     # enum macros
#         enum-as-inner = "0.6.0"
    # # mcarton/rust-derivative
    #     derivative = "2.2.0"