[package]
    name = "chronicle"
    version = "0.1.0"
    authors = ["Julian Erickson <julian@rothlabs.com>"]
    edition = "2021"

[dependencies]
    # graph
        graph = { path = "../graph" }
    # third party
        # serde
            serde = { version = "1.0", features = ["derive"] }
            serde_json = "1.0"
        # macros
            # dyn-clone = {workspace = true}
            # erased-serde = {workspace = true}
            # enum-as-inner = {workspace = true}