[package]
name = "gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
    wasm-bindgen = "0.2.92"
    # Delimit
        graph = {path = "../graph"}
        text = {path = "../text"}

[dependencies.web-sys]
    version = "0.3.69"
    features = [
        'Window', 
        'Document', 
        'HtmlCanvasElement' ,
        'OffscreenCanvas',
        'WebGlRenderingContext', 
        'WebGl2RenderingContext', 
        'WebGlProgram', 
        'WebGlShader', 
        'WebGlBuffer', 
        'WebGlFramebuffer', 
        'WebGlVertexArrayObject',
        'WebGlUniformLocation',
        'WebGlTexture'
    ]