[package]
name = "gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
    wasm-bindgen = "0.2.93"
    wasm-bindgen-futures = "0.4.43"

        gloo-timers = { version = "0.3.0", features = ["futures"] }
    # dtolnay
        anyhow = "1.0.86"
    # Macros
        derive_builder = "0.20.0"
    # delimit 
        graph = { path = "../graph", features = ["oneThread"], default-features = false }
        text = {path = "../text"}

[dependencies.web-sys]
    version = "0.3.70"
    features = [
        'Window', 
        'Document', 
        'HtmlCanvasElement' ,
        'OffscreenCanvas',
        'WebGlRenderingContext', 
        'WebGl2RenderingContext', 
        'WebGlProgram', 
        'WebGlShader', 
        'WebGlBuffer', 
        'WebGlFramebuffer', 
        'WebGlVertexArrayObject',
        'WebGlTransformFeedback',
        'WebGlUniformLocation',
        'WebGlTexture',
        'WebGlSync',
    ]
