[package]
    name = "graph"
    version = "0.1.0"
    authors = ["Julian Erickson <julian@rothlabs.com>"]
    edition = "2021"

[features]
    oneThread = []

[dependencies]
    # third party
        # futures
            futures = "0.3.3"
        # tokio
            tokio = { version = "1.38.0", features = ["full"] }
            parking_lot = { version = "0.12", features = ["send_guard"] }
        # serde
            serde = { version = "1.0", features = ["derive"] }
            serde_json = "1.0"
        # dtolnay
            thiserror = "1.0"
            anyhow = "1.0.86"
            async-trait = "0.1.82"
        # rand
            rand = "0.8.5"
        # Macros
            derive_builder = "0.20.0"

        # regex
            # regex = "1.0.0"
        # serde
            # erased-serde = {workspace = true}
        # derive
            # derivative = {workspace = true}
            #     #[derive(derivative::Derivative)]
            #     #[derivative(Clone(bound = ""))]
