[package]
    name = "graph"
    version = "0.1.0"
    authors = ["Julian Erickson <julian@rothlabs.com>"]
    edition = "2021"

[features]
    default = ['dep:tokio', 'dep:parking_lot', 'dep:futures']
    oneThread = []

[dependencies]
    js-sys = "0.3.70"
    # third party
        # futures
            futures = { version = "0.3.3", optional = true }
        # tokio
            tokio = { version = "1.40.0", features = ["full"], optional = true }
            parking_lot = { version = "0.12", features = ["send_guard"], optional = true }
        # serde
            serde = { version = "1.0", features = ["derive"] }
            serde_json = "1.0"
        # dtolnay
            thiserror = "1.0"
            anyhow = "1.0.86"
        # rand
            rand = "0.8.5"
        # Macros
            derive_builder = "0.20.0"
            # paste = "1.0"
            # macro_rules_attribute = "0.2.0"
            # attr_alias = "0.1.3"

        # async-trait = "0.1.82"
        # regex
            # regex = "1.0.0"
        # serde
            # erased-serde = {workspace = true}
        # derive
            # derivative = {workspace = true}
            #     #[derive(derivative::Derivative)]
            #     #[derivative(Clone(bound = ""))]
