[package]
    name = "text"
    version = "0.1.0"
    authors = ["Julian Erickson <julian@rothlabs.com>"]
    edition = "2021"

[dependencies]
    # third party
        # serde
            serde = { version = "1.0", features = ["derive"] }
            serde_json = "1.0"
        # macros
            derive_builder = "0.20.0"
            # dyn-clone = {workspace = true}
            # erased-serde = {workspace = true}
            # enum-as-inner = {workspace = true}
    # delimit
        graph = { path = "../graph" }