[package]
    name = "client"
    version = "0.1.0"
    authors = ["Julian Erickson <julian@rothlabs.com>"]
    edition = "2021"

[lib]
    crate-type = ["cdylib", "rlib"]

[features]
    default = ["console_error_panic_hook"]

[dependencies]
    wasm-bindgen = "0.2.92"
    console_error_panic_hook = { version = "0.1.7", optional = true }
    # delimit
        graph = { path = "../../graph" }
        mecha = { path = "../../mecha" }
        gpu = { path = "../../gpu" }

[dependencies.web-sys]
    version = "0.3.69"
    features = [
        'Window', 
        'Document', 
        'HtmlCanvasElement' ,
        'WebGlRenderingContext', 
        'WebGl2RenderingContext', 
        'WebGlProgram', 
        'WebGlShader', 
        'WebGlBuffer', 
        'WebGlFramebuffer', 
        'WebGlVertexArrayObject',
        'WebGlUniformLocation',
        'WebGlTexture'
    ]

[dependencies.getrandom]
    features = ["js"]

[dev-dependencies]
    wasm-bindgen-test = "0.3.42"

    # The `console_error_panic_hook` crate provides better debugging of panics by
    # logging them with `console.error`. This is great for development, but requires
    # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
    # code size when deploying.