[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
    # tokio
        tokio = { version = "1.38.0", features = ["full"] }
        bytes = "1"
    # hyper
        hyper = { version = "1.3.1", features = ["full"] }
        hyper-util = { version = "0.1.5", features = ["full"] }
        http-body-util = "0.1.1"
    # logging
        pretty_env_logger = "0.5"
    # chronicle graphs
        chronicle = { path = "../../chronicle" }
