[package]
    name = "repo"
    version = "0.1.0"
    authors = ["Julian Erickson <julian@rothlabs.com>"]
    edition = "2021"

[dependencies]
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"
    tokio = { version = "1.38.0", features = ["full"] }
    bytes = "1"
    hyper = { version = "1.3.1", features = ["full"] }
    hyper-util = { version = "0.1.5", features = ["full"] }
    http-body-util = "0.1.1"
    pretty_env_logger = "0.5"
    graph = {path = "../graph"}
    text = {path = "../text"}