[package]
    name = "text"
    version = "0.1.0"
    authors = ["Julian Erickson <julian@rothlabs.com>"]
    edition = "2021"

[dependencies]
    # third party
        # futures
            # futures = "0.3.3"
        # serde
            serde = { version = "1.0", features = ["derive"] }
            serde_json = "1.0"
        # tokio
            # tokio = { version = "1.38.0", features = [] }
        # macros
            derive_builder = "0.20.0"
            # dyn-clone = {workspace = true}
            # erased-serde = {workspace = true}
            # enum-as-inner = {workspace = true}
    # delimit
        graph = { path = "../graph", default-features = false }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["test-util"] }