[package]
    name = "text"
    version = "0.1.0"
    authors = ["Julian Erickson <julian@rothlabs.com>"]
    edition = "2021"

[dependencies]
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"
    derive_builder = "0.20.0"
    macro_rules_attribute = "0.2.0"
    graph = { path = "../graph" }
    derive_node = { path = "../derive_node" }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["test-util"] }