[package]
    name = "app"
    version = "0.1.0"
    authors = ["Julian Erickson <julian@rothlabs.com>"]
    edition = "2021"

[lib]
    crate-type = ["cdylib", "rlib"]

[features]
    default = ["console_error_panic_hook"]

[dependencies]
    wasm-bindgen = "0.2.93"
    wasm-bindgen-futures = "0.4.43"
    console_error_panic_hook = { version = "0.1.7", optional = true }
    getrandom = {version = "0.2", features = ["js"]}
    thiserror = "1.0"
    anyhow = "1.0.86"
    gloo-timers = { version = "0.3.0", features = ["futures"] }
    gloo-render = "0.2.0"
    derive_builder = "0.20.0"
    paste = "1.0"
    macro_rules_attribute = "0.2.0"
    graph = { path = "../../core/graph", features = ["oneThread"], default-features = false } 
    dom = { path = "../dom" }
    gpu = { path = "../gpu" }

[dependencies.web-sys] 
    version = "0.3.70"
    features = [
        'Window', 
        'Document', 
        'HtmlCanvasElement',
        'OffscreenCanvas',
        'WebGlRenderingContext', 
        'WebGl2RenderingContext', 
        'WebGlProgram', 
        'WebGlShader', 
        'WebGlBuffer', 
        'WebGlFramebuffer', 
        'WebGlVertexArrayObject',
        'WebGlUniformLocation',
        'WebGlTexture'
    ]

[dev-dependencies]
    wasm-bindgen-test = "0.3.43"

    # The `console_error_panic_hook` crate provides better debugging of panics by
    # logging them with `console.error`. This is great for development, but requires
    # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
    # code size when deploying.