[package]
name = "dom"
version = "0.1.0"
edition = "2021"

[dependencies]
    wasm-bindgen = "0.2.93"
    wasm-bindgen-futures = "0.4.43"
    gloo-timers = { version = "0.3.0", features = ["futures"] }
    anyhow = "1.0.86"
    derive_builder = "0.20.0"
    paste = "1.0"
    macro_rules_attribute = "0.2.0"
    thiserror = "1.0"
    graph = { path = "../../core/graph", features = ["oneThread"], default-features = false }

[dependencies.web-sys]
    version = "0.3.70"
    features = [
        'Window', 
        'Document', 
    ]