[package]
name = "gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
    wasm-bindgen = "0.2.93"
    wasm-bindgen-futures = "0.4.43"
    derive_builder = "0.20.1"
    macro_rules_attribute = "0.2.0"
    wgpu = "22.1.0"
    bytemuck = "1.18.0"
    flume = "0.11.0"
    graph = { path = "../../core/graph", features = ["oneThread"], default-features = false }

[dependencies.web-sys]
    version = "0.3.70"
    features = [
        'HtmlCanvasElement'
    ]
