[package]
name = "gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
    derive_builder = "0.20.1"
    macro_rules_attribute = "0.2.0"
    wgpu = "22.1.0"
    bytemuck = "1.18.0"
    flume = "0.11.0"
    graph = { path = "../../core/graph", default-features = false, features = ["oneThread"] }

[dev-dependencies]
    wasm-bindgen-test = "0.3.43"
    dom = { path = "../dom" }



    # wasm-bindgen = "0.2.93"
    # wasm-bindgen-futures = "0.4.43"
    # getrandom = {version = "0.2", features = ["js"]}

# [dependencies.web-sys]
#     version = "0.3.70"
#     features = [
#         'HtmlCanvasElement'
#     ]