[package]
name = "gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
    derive_builder = "0.20.1"
    macro_rules_attribute = "0.2.0"
    wgpu = "22.1.0"
    bytemuck = "1.18.0"
    flume = "0.11.0"
    graph = { path = "../../core/graph", default-features = false, features = ["oneThread"] }
    node_derive = { path = "../../core/node_derive" }

[dev-dependencies]
    wasm-bindgen-test = "0.3.43"
    dom = { path = "../dom" }