[package]
name = "mech"
version = "0.1.0"
edition = "2021"
resolver = "2" 

[dependencies]
    serde = { version = "1.0", features = ["derive"] }
    derive_builder = "0.20.1"
    graph = { path = "../../core/graph", default-features = false, features = ["oneThread"] }
    gpu = { path = "../gpu" }
    node_derive = { path = "../../core/node_derive" }

[dev-dependencies]
    wasm-bindgen-test = "0.3.43"
    dom = { path = "../dom" }