[package]
name = "webgl"
version = "0.1.0"
edition = "2021"

[dependencies]
    wasm-bindgen = "0.2.93"
    wasm-bindgen-futures = "0.4.43"
    gloo-timers = { version = "0.3.0", features = ["futures"] }
    derive_builder = "0.20.1"
    macro_rules_attribute = "0.2.0"
    graph = { path = "../../core/graph", default-features = false, features = ["oneThread"] }

[dependencies.web-sys]
    version = "0.3.70"
    features = [
        # 'Window', 
        # 'Document', 
        # 'HtmlCanvasElement',
        # 'OffscreenCanvas',
        # 'WebGlRenderingContext', 
        # 'WebGl2RenderingContext', 
        # 'WebGlProgram', 
        'WebGlShader', 
        'WebGlBuffer', 
        'WebGlFramebuffer', 
        'WebGlVertexArrayObject',
        'WebGlTransformFeedback',
        'WebGlUniformLocation',
        'WebGlTexture',
        'WebGlSync',
    ]

[dev-dependencies]
    wasm-bindgen-test = "0.3.43"